--- a/program.css
+++ b/program.css
@@ -31,35 +31,22 @@ nav {
     list-style: none;
     display: flex;
 }
-
-h1{
-    font-size: 30px;
-    margin-bottom: 30px;
-}
-
 .header-menu a {
     color: white;
     margin-left: 20px;
     font-size: 15px;
     text-decoration: none;
+}  
+h3{
+    margin-bottom: 25px;
 }
-
-main img {
-    width: 300px;
-    height: 400px;
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-.pan {
-    text-align: center;
-}
-main p{
-    font-size: 15px;
+li h4{
+    margin-bottom: 25px;
+    color: #4169E1;
+} 
+li{
+    list-style: none;
     line-height: 1.5;
     letter-spacing: 0.00938em;
-}
-.park{
-    margin-bottom: 20px;
-    font-size: 25px;
+    margin-bottom: 25px;
 }
